增加中邮对账单的接口单元测试；GetMonthBillIncome，ListMonthBankChange，ListMonthIntervalTradeAnalyze

--- a/conf/conf.ini
+++ b/conf/conf.ini
@@ -10,3 +10,20 @@ database = account_analyze_fc
 [fc_info]
 fund_account = 11000619
 interval_type = 1
+
+[url_prefix]
+ANALYSIS_FC_PREFIX = http://10.20.18.174:8084/fc/
+SERVICE_MALL_PREFIX = http://10.20.37.226:8101/
+analysis_cnpsec_prefix = http://10.20.18.174:8096/cnpsec/
+
+[database_cnpsec]
+host = 
+port = 3306
+user = root
+password = 
+charset = utf8
+database = account_analyze_cnpsec
+
+[cnpsec_info]
+fund_account = 88888
+interval = 201905
