增加单元测试接口： ListMonthBankDetail，ListMonthStockTradeStockCode，GetMonthStockTradeDetail， GetMonthAccountYield， GetMonthIndexAcYield

--- a/conf/conf.ini
+++ b/conf/conf.ini
@@ -17,13 +17,14 @@ SERVICE_MALL_PREFIX = http://10.20.37.226:8101/
 analysis_cnpsec_prefix = http://10.20.18.174:8096/cnpsec/
 
 [database_cnpsec]
-host = 
+host = 10.20.18.174
 port = 3306
 user = root
-password = 
+password = Hundsun123
 charset = utf8
 database = account_analyze_cnpsec
 
 [cnpsec_info]
 fund_account = 88888
 interval = 201905
+page_size = 100
