--- a/conf/conf.ini
+++ b/conf/conf.ini
@@ -12,15 +12,15 @@ fund_account = 11000619
 interval_type = 1
 
 [url_prefix]
-ANALYSIS_FC_PREFIX = http://10.20.18.174:8084/fc/
-SERVICE_MALL_PREFIX = http://10.20.37.226:8101/
-analysis_cnpsec_prefix = http://10.20.18.174:8096/cnpsec/
+ANALYSIS_FC_PREFIX = http://10..174:8084/fc/
+SERVICE_MALL_PREFIX = http://10..226:8101/
+analysis_cnpsec_prefix = http://10..174:8096/cnpsec/
 
 [database_cnpsec]
-host = 10.20.18.174
+host = 
 port = 3306
 user = root
-password = Hundsun123
+password = 
 charset = utf8
 database = account_analyze_cnpsec
 
