--- a/conf/conf.ini
+++ b/conf/conf.ini
@@ -14,13 +14,13 @@ interval_type = 1
 [url_prefix]
 ANALYSIS_FC_PREFIX = http://10..174:8084/fc/
 SERVICE_MALL_PREFIX = http://10..226:8101/
-analysis_cnpsec_prefix = http://10..174:8096/cnpsec/
+analysis_cnpsec_prefix = http://10.20.18.174:8096/cnpsec/
 
 [database_cnpsec]
 host = 
 port = 3306
 user = root
-password = 
+password =
 charset = utf8
 database = account_analyze_cnpsec
 
