--- a/conf/conf.ini
+++ b/conf/conf.ini
@@ -17,10 +17,10 @@ SERVICE_MALL_PREFIX = http://10..226:8101/
 analysis_cnpsec_prefix = http://10.20.18.174:8096/cnpsec/
 
 [database_cnpsec]
-host = 10.20.18.174
+host = 
 port = 3306
 user = root
-password = Hundsun123
+password = 
 charset = utf8
 database = account_analyze_cnpsec
 
