财富账户分析造数据脚本增加： home_page_user_interval_data， home_page_user_month_data，cash_page_user_daily_data，stock_page_user_daily_data，  stock_page_user_interval_data， stock_page_user_single_stock_interval_data， stock_page_user_interval_trade_distribution， financial_page_user_daily_data， financial_page_user_interval_data， bond_page_user_daily_data

--- a/conf/conf.ini
+++ b/conf/conf.ini
@@ -24,6 +24,14 @@ password =
 charset = utf8
 database = account_analyze_cnpsec
 
+[database_fortune]
+host = 10.20.32.117
+port = 9090
+user = root
+password =
+charset = utf8
+database =
+
 [cnpsec_info]
 fund_account = 88888
 interval = 201905
