支持hbase连接，并增加接口get_bond_page_user_daily_data的部分业务逻辑

--- a/conf/conf.ini
+++ b/conf/conf.ini
@@ -15,6 +15,7 @@ interval_type = 1
 ANALYSIS_FC_PREFIX = http://10..174:8084/fc/
 SERVICE_MALL_PREFIX = http://10..226:8101/
 analysis_cnpsec_prefix = http://10.20.18.174:8096/cnpsec/
+analysis_chasing_prefix = http://10.20.18.174:9007/chasing/
 
 [database_cnpsec]
 host =
@@ -24,15 +25,18 @@ password =
 charset = utf8
 database = account_analyze_cnpsec
 
-[database_fortune]
+[database_chasing]
 host = 10.20.32.117
 port = 9090
-user = root
-password =
-charset = utf8
-database =
+database_prefix = chenk
+column_family = tag_base:
 
 [cnpsec_info]
 fund_account = 88888
 interval = 201905
+page_size = 100
+
+[chasing_info]
+fund_account = 88888
+init_date = 20200326
 page_size = 100
