增加hbase的样例

--- a/conf/conf.ini
+++ b/conf/conf.ini
@@ -18,17 +18,17 @@ analysis_cnpsec_prefix = http://10.20.18.174:8096/cnpsec/
 analysis_chasing_prefix = http://10.20.18.174:9007/chasing/
 
 [database_cnpsec]
-host = 
+host = 10.20.18.174
 port = 3306
 user = root
-password = 
+password = Hundsun123
 charset = utf8
 database = account_analyze_cnpsec
 
 [database_chasing]
 host = 10.20.32.117
 port = 9090
-database_prefix = chenk
+database_prefix = chenk_zhfx:
 column_family = tag_base:
 
 [cnpsec_info]
