增加接口 GetStockPageUserDailyData， GetStockPageUserIntervalData， GetStockDetailPageData； 优化代码中关于 list_name处理； 修复造数据脚本中，部分数据不符合的问题

--- a/conf/conf.ini
+++ b/conf/conf.ini
@@ -39,7 +39,11 @@ page_size = 100
 
 [chasing_info]
 fund_account = 88888
-init_date = 20200326
+init_date = 20200426
 page_size = 100
 interval = 1
 asset_prop = 0
+# cal_record表，最新的交易日
+cal_init_date = 20200426
+stock_code = 002415
+exchange_type = 2
