1、国联造数据所有表完成；2、增加下述接口的单元测试：GetIncomeAnalyze，GetLastAsset

--- a/conf/conf.ini
+++ b/conf/conf.ini
@@ -16,6 +16,7 @@ ANALYSIS_FC_PREFIX = http://10..174:8084/fc/
 SERVICE_MALL_PREFIX = http://10..226:8101/
 analysis_cnpsec_prefix = http://10.20.18.174:8096/cnpsec/
 analysis_chasing_prefix = http://10.20.18.174:9007/chasing/
+analysis_guolian_prefix = http://10.20.18.174:18083/guolian/
 
 [database_cnpsec]
 
@@ -45,5 +46,23 @@ interval = 1
 asset_prop = 0
 # cal_record表，最新的交易日
 cal_init_date = 20200426
+stock_code = 002415
+exchange_type = 2
+
+
+[database_guolian]
+host = 10.20.32.117
+port = 9090
+database_prefix = zhfx_gl_chenk:
+column_family = tag_base:
+
+[guolian_info]
+fund_account = 88888
+init_date = 20200430
+page_size = 100
+interval = 1
+asset_prop = 0
+# cal_record表，最新的交易日
+cal_init_date = 20200430
 stock_code = 002415
 exchange_type = 2
