增加下述接口测试用例：GetAssureRatio，CreditGetStockPreference，CreditGetLastAsset

--- a/conf/conf.ini
+++ b/conf/conf.ini
@@ -58,6 +58,7 @@ column_family = tag_base:
 
 [guolian_info]
 fund_account = 88888
+credit_fund_account = 88889
 init_date = 20200430
 page_size = 100
 interval = 1
